add more functionalities for articles - read,update,delete

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,18 @@
 <%= form_with scope: :article, url: articles_path, local: true do |form| %>
+
+	<% if @article.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@article.errors.count, "error") %> prohibited
+        this article from being saved:
+      </h2>
+      <ul>
+        <% @article.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
   <p>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
@@ -12,4 +26,6 @@
   <p>
     <%= form.submit %>
   </p>
+	
+	<%= link_to 'Back', articles_path %>
 <% end %>
